--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,14 @@ dependencies {
 
     testImplementation("io.micronaut:micronaut-http-client")
 
+    testAnnotationProcessor("io.micronaut:micronaut-inject-java")
+    testImplementation("org.junit.jupiter:junit-jupiter-api")
+    testImplementation("io.micronaut.test:micronaut-test-junit5:2.3.7")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.1")
+    testImplementation("org.mockito:mockito-core:3.+")
+    testImplementation("org.mockito:mockito-inline:3.+")
+    testImplementation("org.assertj:assertj-core:3.6.1")
+
 }
 
 
